--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -47,8 +47,7 @@ body {
     font-family: 'Cormorant Garamond';
     font-style: normal;
     font-weight: 500;
-    font-size: 40px;
-    line-height: 70px;
+    font-size: 24px;
     /* identical to box height, or 175% */
 
     text-align: center;
@@ -73,4 +72,21 @@ select {
 .check {
     width: 20px;
     height: 19px;
+}
+
+button{
+    background: #BDD9FF;
+    border: 1px solid #BDD9FF;
+    border-radius: 11px;
+    font-family: 'Cormorant Garamond';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    /* identical to box height, or 175% */
+    text-align: center;
+    letter-spacing: -0.02em;
+    color: #090074;
+}
+button:disabled{
+    cursor:  not-allowed;
 }
