--- a/src/main/resources/templates/dispatcher.html
+++ b/src/main/resources/templates/dispatcher.html
@@ -10,6 +10,8 @@
   <link type="text/css" rel="stylesheet" href="../static/css/header.css" th:href="@{/css/header.css}"/>
   <link type="text/css" rel="stylesheet" href="../static/css/search.css" th:href="@{/css/search.css}"/>
   <link type="text/css" rel="stylesheet" href="../static/css/table.css" th:href="@{/css/table.css}"/>
+  <link type="text/css" rel="stylesheet" href="../static/css/dispatcher.css" th:href="@{/css/dispatcher.css}"/>
+
 </head>
 <body>
 <header th:insert="blocks/header::header"></header>
@@ -23,7 +25,7 @@
     <img src="/img/delete.svg" alt="Отмена"/>
   </a>
 </div>
-<a href="/orders-w">Заказы на склад</a>
+<button type="submit" action="/orders-w" class="btn_1">Заказы на склад</button>
 <div class="orders">
   <table>
     <tr>
@@ -41,7 +43,7 @@
         <td th:text="${order.status}"></td>
         <td th:text="${order.orderDate}"></td>
         <td th:text="${order.desiredDate}"></td>
-        <td th:text="${order.totalHours} + ':' + ${order.totalMinutes}"></td>
+        <td th:text="${order.totalHours} + ' ч. ' + ${order.totalMinutes} + ' мин.'"></td>
       </tr>
     </div>
   </table>
