--- a/src/main/resources/templates/order-w.html
+++ b/src/main/resources/templates/order-w.html
@@ -36,7 +36,7 @@
             </tr>
         </div>
     </table>
-    <button class="btn" type="submit" th:disabled="${totalQuantity==0}">Заказать</button>
+    <button class="btn" type="submit" onclick="location.href='/'" th:disabled="${totalQuantity==0}">Заказать</button>
 </form>
 </body>
 </html>
